test : added getBookingsByOwnerParameterTest method